--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
 		<link rel="stylesheet" href="./src/styles/colors.css" />
 	</head>
 	<body>
-		<h1>Pokedex</h1>
-		<div class="home-page">
-			<div id="pokemon-list" class="pokemon-list"></div>
-			<div id="contextmenu" style="display: none">
-				<button id="viewDetails">View Details</button>
-				<button id="add">Add to team</button>
+		<header>
+			<h1>Pokedex</h1>
+		</header>
+		<main>
+			<div class="home-page">
+				<div id="pokemon-list" class="pokemon-list"></div>
+				<div id="contextmenu">
+					<button id="viewDetails">View Details</button>
+					<button id="add">Add to team</button>
+				</div>
+				<div id="side-menu" class="side-menu">
+					<h2>Your team</h2>
+					<div id="yourTeam"></div>
+				</div>
 			</div>
-			<div class="side-menu">
-				<h2>Your team</h2>
-				<div id="side-menu"></div>
-			</div>
-		</div>
+		</main>
 		<script src="./src/scripts/script.js"></script>
 	</body>
 </html>
