--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
 		<title>My Pokedex</title>
 		<link rel="stylesheet" href="./src/styles/styles.css" />
 		<link rel="stylesheet" href="./src/styles/colors.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=VT323&display=swap"
+			rel="stylesheet" />
 	</head>
 	<body>
 		<header>
-			<h1>Pokedex</h1>
+			<h1>Pokédex</h1>
 		</header>
 		<main>
 			<div class="home-page">
@@ -18,9 +23,13 @@
 					<button id="viewDetails">View Details</button>
 					<button id="add">Add to team</button>
 				</div>
-				<div id="side-menu" class="side-menu">
+				<div id="team_menu">
 					<h2>Your team</h2>
 					<div id="yourTeam"></div>
+					<button id="battleButton">Start Battle</button>
+				</div>
+				<div>
+					<img class="background" src="./src/images/wp10311683-pokemon-landscape-wallpapers.jpg" />
 				</div>
 			</div>
 		</main>
